--- a/index.html
+++ b/index.html
@@ -81,9 +81,39 @@
 <div class="container">
 	
   <div class="row">
+    <h2>Witness two male frogs procreate</h2>
+    <h4>gayfrogs.tk</h4>
+    <img src="frogs.jpg" class="img-responsive" alt="Placeholder image">
+    <br>
+    <br>
+	  <a href="https://gayfrogs.tk" class="btn btn-primary btn-lg">Visit This Site</a>
+	  <br>
+  </div>
+  
+  <div class="row">
+    <h2>Remember... No Russian</h2>
+    <h4>notcrimea.tk</h4>
+    <img src="crimea.jpg" class="img-responsive" alt="Placeholder image">
+    <br>
+    <br>
+	  <a href="https://notcrimea.tk" class="btn btn-primary btn-lg">Visit This Site</a>
+	  <br>
+  </div>
+  
+  <div class="row">
+    <h2>I got Hooooooooooles Caaaalln'</h2>
+    <h4>edwardisu.tk</h4>
+    <img src="edward.jpg" class="img-responsive" alt="Placeholder image">
+    <br>
+    <br>
+	  <a href="https://edwardisu.tk" class="btn btn-primary btn-lg">Visit This Site</a>
+	  <br>
+  </div>
+  
+  <div class="row">
     <h2>Pacific Maritime Website</h2>
     <h4>Last Updated on Nov 12 2016</h4>
-    <img src="PMWEB.jpeg" class="img-responsive" alt="Placeholder image">
+    <img src="PMWEB.jpg" class="img-responsive" alt="Placeholder image">
     <br>
     <br>
 	  <a href="https://l3n0ire.github.io/pmwebv1/" class="btn btn-primary btn-lg">Visit This Site</a>
