--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <img src="frogs.jpg" class="img-responsive" alt="Placeholder image">
     <br>
     <br>
-	  <a href="https://gayfrogs.tk" class="btn btn-primary btn-lg">Visit This Site</a>
+	  <a href="http://gayfrogs.tk" class="btn btn-primary btn-lg">Visit This Site</a>
 	  <br>
   </div>
   <hr>
@@ -96,7 +96,7 @@
     <img src="crimea.jpg" class="img-responsive" alt="Placeholder image">
     <br>
     <br>
-	  <a href="https://notcrimea.tk" class="btn btn-primary btn-lg">Visit This Site</a>
+	  <a href="http://notcrimea.tk" class="btn btn-primary btn-lg">Visit This Site</a>
 	  <br>
   </div>
   <hr>
@@ -106,7 +106,7 @@
     <img src="edward.jpg" class="img-responsive" alt="Placeholder image">
     <br>
     <br>
-	  <a href="https://edwardisu.tk" class="btn btn-primary btn-lg">Visit This Site</a>
+	  <a href="http://edwardisu.tk" class="btn btn-primary btn-lg">Visit This Site</a>
 	  <br>
   </div>
   <hr>
