--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	
   <div class="row">
     <h2>Witness two male frogs procreate</h2>
-    <h4>gayfrogs.tk</h4>
+    <h4>AKA gayfrogs.tk Click link below</h4>
     <img src="frogs.jpg" class="img-responsive" alt="Placeholder image">
     <br>
     <br>
@@ -92,7 +92,7 @@
   <hr>
   <div class="row">
     <h2>Remember... No Russian</h2>
-    <h4>notcrimea.tk</h4>
+    <h4>AKA notcrimea.tk Click link below</h4>
     <img src="crimea.jpg" class="img-responsive" alt="Placeholder image">
     <br>
     <br>
@@ -102,7 +102,7 @@
   <hr>
   <div class="row">
     <h2>I got Hooooooooooles Caaaalln'</h2>
-    <h4>edwardisu.tk</h4>
+    <h4>AKA edwardisu.tk Click link below</h4>
     <img src="edward.jpg" class="img-responsive" alt="Placeholder image">
     <br>
     <br>
